Разделен список книг по страницам

--- a/template.html
+++ b/template.html
@@ -15,20 +15,20 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <div class="container">
-      {% for books in book_feateres %}
+      {% for books in books_feateres %}
         <div class="row">
           {% for book in books %}
             <div class="col">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="{{ book.image_src }}" class="card-img" alt="{{ book.book_title }}">
+                    <img src="../{{ book.image_src }}" class="card-img" alt="../{{ book.book_title }}">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">{{ book.book_title }}</h5>
                       <p class="card-text">{{ book.book_author }}</p>
-                      <a href="{{ book.book_path }}" target="_blank" rel="noopener noreferrer">Читать</a>
+                      <a href="../{{ book.book_path }}" target="_blank" rel="noopener noreferrer">Читать</a>
                     </div>
                   </div>
                 </div>
