--- a/template.html
+++ b/template.html
@@ -15,6 +15,28 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <div class="container">
+      <nav aria-label="Page navigation", class="ml-auto">
+        <ul class="pagination">
+          {% if current_page == 0 %}
+            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Назад</a></li>
+          {% else %}
+            <li class="page-item"><a class="page-link" href="index{{ current_page - 1 }}.html">Назад</a></li>
+          {% endif %}
+          {% for page in range(pages_number) %}
+            {% if page == current_page %}
+              <li class="page-item active" aria-current="page">
+                <a class="page-link" href="index{{ page }}.html">{{ page + 1 }}<span class="sr-only">(current)</span></a></li>
+            {% else %}
+              <li class="page-item"><a class="page-link" href="index{{ page }}.html">{{ page + 1 }}</a></li>
+            {% endif %}
+          {% endfor %}
+          {% if current_page == pages_number - 1 %}
+            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Вперёд</a></li>
+          {% else %}
+            <li class="page-item"><a class="page-link" href="index{{ current_page + 1 }}.html">Вперёд</a></li>
+          {% endif %}
+        </ul>
+      </nav>
       {% for books in books_feateres %}
         <div class="row">
           {% for book in books %}
