--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL=../pages/index0.html" />
+<meta http-equiv="refresh" content="0; URL=online_library/pages/index0.html" />
